darcs-monitor (0.4.0-1) UNRELEASED; urgency=low

  [ Joachim Breitner ]
  * Added watch file

  [ Marco Túlio Gontijo e Silva ]
  * New upstream version.
  * control: Bump Standards-Version to 3.9.0.  No changes needed.

 -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Wed, 08 Sep 2010 16:22:47 -0300

darcs-monitor (0.3.8-2) unstable; urgency=low

  * Fix "default-template is installed in the wrong directory" by changing
    the installation directory. (Closes: #596127)

 -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Wed, 08 Sep 2010 16:52:32 -0300

darcs-monitor (0.3.8-1) unstable; urgency=low

  * New upstream version.
  * Fix "override disparity" Changed Section: to vcs. (Closes:
    #527934)
  * debian/install: Install default-template in the correct dir.

 -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Sun, 07 Mar 2010 12:46:04 -0300

darcs-monitor (0.3.7-1) unstable; urgency=low

  * New upstream version.
  * debian/control: Addopt by the Debian Haskell Group.
  * debian/control: Update Homepage: field.
  * debian/control: Bump Standards-Version to 3.8.4, no changes needed.
  * debian/control: Add fields Vcs-*.
  * Use haskell-devscripts.
  * debian/source/format: Use 3.0 (quilt) source format.

 -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Sun, 28 Feb 2010 11:36:22 -0300

darcs-monitor (0.3.6-2) unstable; urgency=low

  * Update the HaXml versioned build-dependency to the new
     epoch.
     Closes: #552719 (FTBFS)
     Reported by Lucas Nussbaum <lucas@lucas-nussbaum.net>

 -- Antti-Juhani Kaijanaho <ajk@debian.org>  Thu, 29 Oct 2009 21:30:33 +0200

darcs-monitor (0.3.6-1) unstable; urgency=low

  * New upstream release
    Closes: #527824 (FTBFS: Couldn't match expected type `[Char]')
    Reported by Lucas Nussbaum <lucas@lucas-nussbaum.net>.
  * debian-control (Build-Depends): add version limit to HaXml to match
    the Cabal one
  * debian-control (Standards-Version): Now 3.8.1.
