@@ -1,2 +1,0 @@
-default-template usr/share/darcs-monitor-0.3.8
-dist-ghc6/build/darcs-monitor/darcs-monitor /usr/bin
