@@ -1,0 +1,2 @@
+default-template usr/share/darcs-monitor-@CABAL_VERSION@
+dist-ghc6/build/darcs-monitor/darcs-monitor /usr/bin
