@@ -6,6 +6,7 @@ darcs-monitor (0.4.0-1) UNRELEASED; urgency=low
   [ Marco Túlio Gontijo e Silva ]
   * New upstream version.
   * control: Bump Standards-Version to 3.9.0.  No changes needed.
+  * Improve debian/install.
 
  -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Wed, 08 Sep 2010 16:22:47 -0300
 
